Adjust the responsiveness

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <section class="main">
-    <h2>Reliable, efficient delivery</h2>
+    <div class="can">
+        <h2>Reliable, efficient delivery</h2>
     <h1>  Powered by Technology</h1>
     <p>Our Artificial Intelligence powered tools use millions of project data points 
-        to ensure that your project is successful</p>
+        to ensure that your project is successful</p></div>
+
     </section>
     
         <div class="all">
@@ -26,11 +28,11 @@
         <img src="/images/icon-supervisor.svg" alt="">
     </div>
     
-    <div class="calculator">
+    <!-- <div class="calculator">
         <h3>Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src="/images/icon-calculator.svg" alt="">
-    </div>
+    </div> -->
     <div class="card">
         <h3>Team Builder</h3>
         <p> Scans our talent network to create the optimal team for your project
